SERVER-2897 Fix exists operator in certain array index match cases